# linalg

./: .gitignore  CMakeLists.txt  OpenCL.md  README.md  eigen.c  eigen.h  errors.c  errors.h  kernel.c  kernel.h  kernels.c  kernels.cl  linalg_obj.h  linreg.c  linreg.h  linsolve.c  linsolve.h  main.c  makefile  matrix.c  matrix.h  rand.c  rand.h  tests.c  tests.h  util.c  util.h  vector.c  vector.h
